--- a/TAU.Website.csproj
+++ b/TAU.Website.csproj
@@ -6,7 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.161" />
     <PackageReference Include="Piranha" Version="10.1.0" />
     <PackageReference Include="Piranha.AspNetCore" Version="10.1.0" />
     <PackageReference Include="Piranha.AspNetCore.Identity.SQLite" Version="10.1.0" />
@@ -18,5 +17,10 @@
     <PackageReference Include="Piranha.Manager.LocalAuth" Version="10.1.0" />
     <PackageReference Include="Piranha.Manager.TinyMCE" Version="10.1.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\css" />
+  </ItemGroup>
+
 
 </Project>
