--- a/package.json
+++ b/package.json
@@ -5,15 +5,7 @@
   "main": "index.js",
   "author": "Piranha CMS",
   "license": "MIT",
-  "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
-    "sass": "^1.52.3"
-  },
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "latest-version": "^6.0.0"
+    "bootstrap": "^5.1.3"
   }
 }
