updated gitignore to exclude sqlite temporary files

--- a/.gitignore
+++ b/.gitignore
@@ -266,6 +266,10 @@ ServiceFabricBackup/
 *.ldf
 *.ndf
 
+# Sqlite database files
+*.db-shm
+*.db-wal
+
 # Business Intelligence projects
 *.rdl.data
 *.bim.layout
