Started to add google recaptcha

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -10,5 +10,9 @@
   "ConnectionStrings": {
     "piranha": "Filename=./piranha.db",
     "blobstorage": "DefaultEndpointsProtocol=https;AccountName=;AccountKey=;EndpointSuffix="
+  },
+  "GoogleReCaptcha": {
+    "SiteKey": "6LfjQj8hAAAAAIB3oEef3qBLd7iC6v8apcSay3Iv",
+    "SecretKey": "6LfjQj8hAAAAAGJTUW6F4Z7xuFQErfoEcj376ESH"
   }
 }
