--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "csso-cli": "^3.0.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "uglify-js": "^3.17.0"
   }
 }
