removed google recaptcha secret key from appsettings; minified js files for blocks

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -12,7 +12,7 @@
     "blobstorage": "DefaultEndpointsProtocol=https;AccountName=;AccountKey=;EndpointSuffix="
   },
   "GoogleReCaptcha": {
-    "SiteKey": "6LfjQj8hAAAAAIB3oEef3qBLd7iC6v8apcSay3Iv",
-    "SecretKey": "6LfjQj8hAAAAAGJTUW6F4Z7xuFQErfoEcj376ESH"
+    "SiteKey": "",
+    "SecretKey": ""
   }
 }
