added Eterna styles, footer and logo

--- a/TAU.Website.csproj
+++ b/TAU.Website.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\Assets\EternaTemplate\css" />
     <Folder Include="wwwroot\css" />
   </ItemGroup>
 </Project>
