--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "csso-cli": "^3.0.0",
     "sass": "^1.53.0",
     "uglify-js": "^3.17.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.30.0",
+    "stylelint": "^14.16.0",
+    "stylelint-config-standard": "^29.0.0"
   }
 }
