--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "main": "index.js",
   "author": "TAU Enterprise",
   "license": "MIT",
-  "dependencies": {
-    "bootstrap": "^5.1.3",
-    "csso-cli": "^3.0.0",
-    "sass": "^1.53.0",
-    "uglify-js": "^3.17.0"
-  },
   "devDependencies": {
+    "csso-cli": "^4.0.1",
     "eslint": "^8.30.0",
+    "sass": "^1.57.1",
     "stylelint": "^14.16.0",
-    "stylelint-config-standard": "^29.0.0"
+    "stylelint-config-standard": "^29.0.0",
+    "uglify-js": "^3.17.4"
   }
 }
