--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,14 +5,14 @@ name: .NET
 
 on:
   push:
-    branches: [ "master", "" ]
+    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v3
@@ -28,4 +28,7 @@ jobs:
         run: dotnet publish -c Release -o ../dotnet-webapp -r linux-x64 --self-contained true /p:UseAppHost=true
       - name: List files
         run: ls -ltra ../dotnet-webapp
+      
+            
+
        
