--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,6 @@ jobs:
         run: dotnet publish -c Release -o ../dotnet-webapp -r linux-x64 --self-contained true /p:UseAppHost=true
       - name: List files
         run: ls -ltra ../dotnet-webapp
-      
-            
-
+      - name: step
+        run: ls -ltra
        
