--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,33 +1,56 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - main
 
 jobs:
   build:
 
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
-      - name: Restore dependencies
-        run: dotnet restore
       - name: Build
-        run: dotnet build --no-restore
-      - name: Publish
-        run: dotnet publish -c Release -o ../dotnet-webapp -r linux-x64 --self-contained true /p:UseAppHost=true
-      - name: List files
-        run: ls -ltra ../dotnet-webapp
-      - name: step
-        run: ls -ltra
-       
+        run: dotnet build --configuration Release
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.0
+        with:
+          path:  bin/Release/net6.0/
+          if-no-files-found: error
+          retention-days: 1
+  publish:
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v3.0.0
+      - name: Stop service
+        run: sudo /bin/systemctl stop tauwebsite.service
+      - name: Backup
+        run: find "/var/www/" -maxdepth 1 -name tauwebsite  -type d -exec mv {} /var/www/tauwebsite-$(date +%m%d%Y-%S) \;
+      - name: Deploy artifact
+        run: mv ~/actions-runner/_work/heroes-cup-reloaded/heroes-cup-reloaded/artifact /var/www/tauwebsite
+#      - name: Link images
+#        run: ln -s /var/www/heroes-cup-uploads/uploads /var/www/heroes-cup/wwwroot
+#      - name: Configure secrets
+#        env:
+#          GOOGLERECAPTCHASITEKEY: ${{ secrets.GOOGLERECAPTCHASITEKEY }}
+#          GOOGLERECAPTCHASITESECRET: ${{ secrets.GOOGLERECAPTCHASITESECRET }}
+#          OUTGOINGEMAILSETTINGSACCOUNT: ${{ secrets.OUTGOINGEMAILSETTINGSACCOUNT }}
+#          OUTGOINGEMAILSETTINGSPASSWORD: ${{ secrets.OUTGOINGEMAILSETTINGSPASSWORD }}
+#          OUTGOINGEMAILSETTINGSSERVER: ${{ secrets.OUTGOINGEMAILSETTINGSSERVER }}
+#        run: |
+#          sed -i.bak -re "s/(.+)SiteKey.+/\1SiteKey\":\"${GOOGLERECAPTCHASITEKEY}\",/" /var/www/heroes-cup/appsettings.json
+#          sed -i.bak -re "s/(.+)SecretKey.+/\1SecretKey\":\"${GOOGLERECAPTCHASITESECRET}\",/" /var/www/heroes-cup/appsettings.json
+#          sed -i.bak -re "s/(.+)EmailAccount.+/\1EmailAccount\":\"${OUTGOINGEMAILSETTINGSACCOUNT}\",/" /var/www/heroes-cup/appsettings.json
+#          sed -i.bak -re "s/(.+)EmailPassword.+/\1EmailPassword\":\"${OUTGOINGEMAILSETTINGSPASSWORD}\",/" /var/www/heroes-cup/appsettings.json
+#          sed -i.bak -re "s/(.+)EmailServer.+/\1EmailServer\":\"${OUTGOINGEMAILSETTINGSSERVER}\",/" /var/www/heroes-cup/appsettings.json
+      - name: Start service
+        run: sudo /bin/systemctl start kupatanageroite.service
+      
