--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,6 +27,8 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
+      - name: Who am i
+        run: whoami
       - name: Download a Build Artifact
         uses: actions/download-artifact@v3.0.0
       - name: Stop service
