--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Backup
         run: find "/var/www/" -maxdepth 1 -name tauwebsite  -type d -exec mv {} /var/www/tauwebsite-$(date +%m%d%Y-%S) \;
       - name: Deploy artifact
-        run: mv ~/actions-runner/_work/heroes-cup-reloaded/heroes-cup-reloaded/artifact /var/www/tauwebsite
+        run: mv ~/actions-runner/_work/TAU.Website/TAU.Website/artifact /var/www/tauwebsite
 #      - name: Link images
-#        run: ln -s /var/www/heroes-cup-uploads/uploads /var/www/heroes-cup/wwwroot
+#        run: ln -s /var/www/tauwebsite/uploads /var/www/tauwebsite/wwwroot
 #      - name: Configure secrets
 #        env:
 #          GOOGLERECAPTCHASITEKEY: ${{ secrets.GOOGLERECAPTCHASITEKEY }}
