--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,6 +17,8 @@ jobs:
           dotnet-version: 6.0.x
       - name: Build
         run: dotnet build --configuration Release
+      - name: list
+        run: ll
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
