--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release
       - name: list
-        run: ll
+        run: ls -ltra
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
