--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,6 +19,10 @@ jobs:
         run: dotnet build --configuration Release
       - name: list
         run: ls -ltra
+      - name: Move db to artifact folder
+        run: mv piranha.db bin/Release/net6.0/
+      - name: list
+        run: ls -ltra bin/Release/net6.0/
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
