--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,12 +21,14 @@ jobs:
         run: ls -ltra
       - name: Move db to artifact folder
         run: mv piranha.db bin/Release/net6.0/
+      - name: Move wwwroot to artifact folder
+        run: mv wwwroot bin/Release/net6.0/
       - name: list
         run: ls -ltra bin/Release/net6.0/
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
-          path:  bin/Release/net6.0/
+          path: bin/Release/net6.0/
           if-no-files-found: error
           retention-days: 1
   publish:
@@ -41,21 +43,21 @@ jobs:
         run: find "/var/www/" -maxdepth 1 -name tauwebsite  -type d -exec mv {} /var/www/tauwebsite-$(date +%m%d%Y-%S) \;
       - name: Deploy artifact
         run: mv /opt/actions-runner/_work/TAU.Website/TAU.Website/artifact /var/www/tauwebsite
-#      - name: Link images
-#        run: ln -s /var/www/tauwebsite/uploads /var/www/tauwebsite/wwwroot
-#      - name: Configure secrets
-#        env:
-#          GOOGLERECAPTCHASITEKEY: ${{ secrets.GOOGLERECAPTCHASITEKEY }}
-#          GOOGLERECAPTCHASITESECRET: ${{ secrets.GOOGLERECAPTCHASITESECRET }}
-#          OUTGOINGEMAILSETTINGSACCOUNT: ${{ secrets.OUTGOINGEMAILSETTINGSACCOUNT }}
-#          OUTGOINGEMAILSETTINGSPASSWORD: ${{ secrets.OUTGOINGEMAILSETTINGSPASSWORD }}
-#          OUTGOINGEMAILSETTINGSSERVER: ${{ secrets.OUTGOINGEMAILSETTINGSSERVER }}
-#        run: |
-#          sed -i.bak -re "s/(.+)SiteKey.+/\1SiteKey\":\"${GOOGLERECAPTCHASITEKEY}\",/" /var/www/heroes-cup/appsettings.json
-#          sed -i.bak -re "s/(.+)SecretKey.+/\1SecretKey\":\"${GOOGLERECAPTCHASITESECRET}\",/" /var/www/heroes-cup/appsettings.json
-#          sed -i.bak -re "s/(.+)EmailAccount.+/\1EmailAccount\":\"${OUTGOINGEMAILSETTINGSACCOUNT}\",/" /var/www/heroes-cup/appsettings.json
-#          sed -i.bak -re "s/(.+)EmailPassword.+/\1EmailPassword\":\"${OUTGOINGEMAILSETTINGSPASSWORD}\",/" /var/www/heroes-cup/appsettings.json
-#          sed -i.bak -re "s/(.+)EmailServer.+/\1EmailServer\":\"${OUTGOINGEMAILSETTINGSSERVER}\",/" /var/www/heroes-cup/appsettings.json
+      #      - name: Link images
+      #        run: ln -s /var/www/tauwebsite/uploads /var/www/tauwebsite/wwwroot
+      #      - name: Configure secrets
+      #        env:
+      #          GOOGLERECAPTCHASITEKEY: ${{ secrets.GOOGLERECAPTCHASITEKEY }}
+      #          GOOGLERECAPTCHASITESECRET: ${{ secrets.GOOGLERECAPTCHASITESECRET }}
+      #          OUTGOINGEMAILSETTINGSACCOUNT: ${{ secrets.OUTGOINGEMAILSETTINGSACCOUNT }}
+      #          OUTGOINGEMAILSETTINGSPASSWORD: ${{ secrets.OUTGOINGEMAILSETTINGSPASSWORD }}
+      #          OUTGOINGEMAILSETTINGSSERVER: ${{ secrets.OUTGOINGEMAILSETTINGSSERVER }}
+      #        run: |
+      #          sed -i.bak -re "s/(.+)SiteKey.+/\1SiteKey\":\"${GOOGLERECAPTCHASITEKEY}\",/" /var/www/heroes-cup/appsettings.json
+      #          sed -i.bak -re "s/(.+)SecretKey.+/\1SecretKey\":\"${GOOGLERECAPTCHASITESECRET}\",/" /var/www/heroes-cup/appsettings.json
+      #          sed -i.bak -re "s/(.+)EmailAccount.+/\1EmailAccount\":\"${OUTGOINGEMAILSETTINGSACCOUNT}\",/" /var/www/heroes-cup/appsettings.json
+      #          sed -i.bak -re "s/(.+)EmailPassword.+/\1EmailPassword\":\"${OUTGOINGEMAILSETTINGSPASSWORD}\",/" /var/www/heroes-cup/appsettings.json
+      #          sed -i.bak -re "s/(.+)EmailServer.+/\1EmailServer\":\"${OUTGOINGEMAILSETTINGSSERVER}\",/" /var/www/heroes-cup/appsettings.json
       - name: Start service
         run: sudo /bin/systemctl start tauwebsite.service
       
