--- a/TAU.Website.csproj
+++ b/TAU.Website.csproj
@@ -6,65 +6,74 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="6.0.7" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="6.0.7"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="6.0.7" />
-        <PackageReference Include="Piranha" Version="10.1.0" />
-        <PackageReference Include="Piranha.AspNetCore" Version="10.1.0" />
-        <PackageReference Include="Piranha.AspNetCore.Identity.SQLite" Version="10.1.0" />
-        <PackageReference Include="Piranha.AttributeBuilder" Version="10.1.0" />
-        <PackageReference Include="Piranha.Data.EF.SQLite" Version="10.1.0" />
-        <PackageReference Include="Piranha.ImageSharp" Version="10.1.0" />
-        <PackageReference Include="Piranha.Local.FileStorage" Version="10.1.0" />
-        <PackageReference Include="Piranha.Manager" Version="10.1.0" />
-        <PackageReference Include="Piranha.Manager.LocalAuth" Version="10.1.0" />
-        <PackageReference Include="Piranha.Manager.TinyMCE" Version="10.1.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="6.0.7"/>
+        <PackageReference Include="Piranha" Version="10.1.0"/>
+        <PackageReference Include="Piranha.AspNetCore" Version="10.1.0"/>
+        <PackageReference Include="Piranha.AspNetCore.Identity.SQLite" Version="10.1.0"/>
+        <PackageReference Include="Piranha.AttributeBuilder" Version="10.1.0"/>
+        <PackageReference Include="Piranha.Data.EF.SQLite" Version="10.1.0"/>
+        <PackageReference Include="Piranha.ImageSharp" Version="10.1.0"/>
+        <PackageReference Include="Piranha.Local.FileStorage" Version="10.1.0"/>
+        <PackageReference Include="Piranha.Manager" Version="10.1.0"/>
+        <PackageReference Include="Piranha.Manager.LocalAuth" Version="10.1.0"/>
+        <PackageReference Include="Piranha.Manager.TinyMCE" Version="10.1.0"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Views\Cms\Pages" />
-        <Folder Include="wwwroot\Assets\EternaTemplate\css" />
-        <Folder Include="wwwroot\css" />
+        <Folder Include="Views\Cms\Pages"/>
+        <Folder Include="wwwroot\Assets\EternaTemplate\css"/>
+        <Folder Include="wwwroot\css"/>
     </ItemGroup>
 
     <ItemGroup>
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-1.png" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-2.png" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-3.png" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-4.png" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-5.png" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-6.png" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-7.png" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-8.png" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\slide\slide-1.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\slide\slide-2.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\slide\slide-3.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-1.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-2.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-3.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-4.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-5.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-6.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-1.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-2.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-3.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-4.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-5.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-6.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-7.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-8.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-9.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\team\team-1.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\team\team-2.jpg" />
-        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\team\team-3.jpg" />
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-1.png"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-2.png"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-3.png"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-4.png"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-5.png"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-6.png"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-7.png"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\clients\client-8.png"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\slide\slide-1.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\slide\slide-2.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\slide\slide-3.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-1.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-2.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-3.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-4.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-5.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\testimonials\testimonials-6.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-1.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-2.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-3.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-4.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-5.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-6.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-7.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-8.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\portfolio\portfolio-9.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\team\team-1.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\team\team-2.jpg"/>
+        <_ContentIncludedByDefault Remove="wwwroot\Assets\EternaTemplate\img\team\team-3.jpg"/>
     </ItemGroup>
+
+    <ItemGroup>
+        <Content Include=".github\workflows\dotnet.yml"/>
+    </ItemGroup>
+
+    <Target Name="CopyDB" AfterTargets="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
+        <Copy SourceFiles="piranha.db" DestinationFolder="$(OutDir)"/>
+    </Target>
+
 </Project>
