--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,6 +15,9 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
+          
+      - name: Instal csso
+        run: npm install csso
       - name: Auto Minify
         uses: nizarmah/auto-minify@v2.1
         with:
