--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,10 +15,10 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
-      - name: Auto Minify
-        uses: nizarmah/auto-minify@v2.1
-        with:
-          directory: 'wwwroot/css'
+#      - name: Auto Minify
+#        uses: nizarmah/auto-minify@v2.1
+#        with:
+#          directory: 'wwwroot/css'
       - name: Build
         run: dotnet build --configuration Release
       - name: Upload a Build Artifact
